--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
-                   
+.container {
+    display: grid;
+    grid-template: 1fr 5fr / 1fr 4fr;
+    grid-template-areas: 
+    'sidebar header' 
+    'sidebar main';
+}         
+
+.header {
+    grid-column: header;
+}
+
+.sidebar {
+    grid-column: sidebar;
+}
+
+.main {
+    grid-column: main;
+}
